[package]
name = "snake"
version = "0.1.0"
authors = ["Joshua Benuck <joshua_benuck@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.32.2", features = ["ttf"] }
failure = "0.1.6"
dirs = "2.0.2"
random = "0.12.2"
rand = "0.7.2"
